--- a/package.json
+++ b/package.json
@@ -9,15 +9,22 @@
     "lint": "biome check",
     "format": "biome format --write",
     "prepare": "husky",
-    "generate": "graphql-codegen"
+    "generate": "graphql-codegen",
+    "generate:icons": "npx tsx scripts/generateIconMap.ts"
   },
   "dependencies": {
     "@apollo/client": "^4.0.3",
+    "@apollo/experimental-nextjs-app-support": "^0.13.0",
+    "@graphql-codegen/typescript-resolvers": "^4.5.2",
+    "clsx": "^2.1.1",
     "graphql": "^16.11.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "rxjs": "^7.8.2"
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "rxjs": "^7.8.2",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
