--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-loading-skeleton": "^3.5.0",
     "rxjs": "^7.8.2",
     "tailwind-merge": "^3.3.1"
   },
