--- a/package.json
+++ b/package.json
@@ -16,16 +16,20 @@
     "@apollo/client": "^4.0.3",
     "@apollo/experimental-nextjs-app-support": "^0.13.0",
     "@graphql-codegen/typescript-resolvers": "^4.5.2",
+    "@hookform/resolvers": "^5.2.1",
     "clsx": "^2.1.1",
     "graphql": "^16.11.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-loading-skeleton": "^3.5.0",
     "rxjs": "^7.8.2",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
