--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "format": "biome format --write",
     "prepare": "husky",
     "generate": "graphql-codegen",
-    "generate:icons": "npx tsx scripts/generateIconMap.ts"
+    "generate:icons": "npx tsx scripts/generateIconMap.ts",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:run:headed": "cypress run --headed"
   },
   "dependencies": {
     "@apollo/client": "^4.0.3",
@@ -41,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cypress": "^15.1.0",
     "husky": "^9.1.7",
     "tailwindcss": "^4",
     "typescript": "^5"
