--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "graphql": "^16.11.0",
     "next": "15.5.2",
     "react": "19.1.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-spinners": "^0.17.0",
     "rxjs": "^7.8.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.5",
