--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@hookform/resolvers": "^5.2.1",
     "clsx": "^2.1.1",
     "graphql": "^16.11.0",
+    "i18next": "^25.5.2",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-device-detect": "^2.2.3",
