--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "graphql": "^16.11.0",
     "i18next": "^25.5.2",
+    "js-cookie": "^3.0.5",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-device-detect": "^2.2.3",
@@ -44,6 +45,7 @@
     "@graphql-codegen/typescript": "^4.1.6",
     "@graphql-codegen/typescript-operations": "^4.6.1",
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
