--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "@types/react-dom": "^19",
     "cypress": "^15.1.0",
     "husky": "^9.1.7",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
